--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="script.js" type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <table>
+      <thead></thead>
+      <tbody></tbody>
+    </table>
+  </body>
 </html>
